@@ -116,7 +116,7 @@ void name(void) __naked __interrupt      \
  * To be used together with DEF_INTHIGH and DEF_INTLOW.
  */
 #define DEF_HANDLER(sig, handler)               \
-    __asm btfsc sig __endasm;                   \
+    __asm btfsc sig, 0 __endasm;                \
     __asm goto  _ ## handler __endasm;
 
 /* Declare handler to be the handler function for the given signal.
@@ -127,9 +127,9 @@ void name(void) __naked __interrupt      \
  * To be used together with DEF_INTHIGH and DEF_INTLOW.
  */
 #define DEF_HANDLER2(sig1,sig2,handler)         \
-    __asm btfss sig1 __endasm;                  \
+    __asm btfss sig1, 0 __endasm;               \
     __asm bra   $+8 __endasm;                   \
-    __asm btfsc sig2 __endasm;                  \
+    __asm btfsc sig2, 0 __endasm;               \
     __asm goto  _ ## handler __endasm;
 
 /* Declare or define an interrupt handler function. */
